--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+body {
+  box-sizing: border-box;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+main {
+  flex-grow: 1;
+}
 .mano-i {
   width: 15px;
   height: 45px;
@@ -26,5 +35,8 @@
   
 }
 .navbar{
+  background-color: #0A2347;
+}
+footer{
   background-color: #0A2347;
 }
